updated page switch button

--- a/templates/bookDetail.html
+++ b/templates/bookDetail.html
@@ -60,8 +60,8 @@
                     </div>
                     <div class='Page'>
                         <img id='BookImg' src='' alt='BookImg'>
-                        <i onClick='NextPage()' class="fa-solid fa-caret-right"></i>
-                        <i onClick='PrevPage()' class="fa-solid fa-caret-left"></i>
+                        <i onClick='NextPage()' id='nextPageIcon' class="fa-solid fa-caret-right"></i>
+                        <i onClick='PrevPage()' id='prevPageIcon' class="fa-solid fa-caret-left"></i>
                     </div>
                         <audio id="audioPlayer" controls>
                             <source src="" type="audio/mp3">
